welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value len
  var T = new Array[Int](len(nums))
                         ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to nums.length-1){
               ^