welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var T = new Array[Int](len(nums))
	for (i <- 0 to nums.length-1){
    if(T(i)==lookingFor){
      return i
    }else{return -1}
  }
}